[GTK] Fix compile warnings in CryptoKeyECGCrypt.cpp https://bugs.webkit.org/show_bug.cgi?id=171851

Reviewed by Alex Christensen.

* crypto/gcrypt/CryptoKeyECGCrypt.cpp:
(WebCore::curveSize):
(WebCore::curveName):
(WebCore::uncompressedPointSizeForCurve):
(WebCore::uncompressedFieldElementSizeForCurve):


Canonical link: https://commits.webkit.org/188832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216581 268f45cc-cd09-0410-ab3c-d52691b4dbfc